cabal-version: 2.4
name:
  reflex-mono
version:
  0.5
synopsis:
  Monomorphised of reflex
description:
  Reflex is a high-performance, deterministic, higher-order Functional Reactive Programming system
license:
  BSD-3-Clause
license-file:
  LICENSE
author:
  Ryan Trinkle
maintainer:
  chessai1996@gmail.com
stability:
  experimental
category:
  frp
build-type:
  simple
homepage:
  https://reflex-frp.org
bug-reports:
  https://github.com/chessai/reflex-mono/issues
extra-source-files:
  README.md

library
  hs-source-dirs: src
  build-depends:
    , MemoTrie >= 0.6 && < 0.7
    , base-noprelude >= 4.10.1 && < 4.13
    , bifunctors >= 5.2 && < 5.6 
    , chronos >= 1.0 && < 2.0
    , comonad >= 4 && < 6
    , containers >= 0.5 && < 0.7
    , data-default >= 0.5 && < 0.8
    , dependent-map >= 0.2.4 && < 0.3
    , exception-transformers >= 0.4 && < 0.5
    , monad-control >= 1.0.1 && < 1.1
    , monoidal-containers >= 0.4 && < 0.5
    , mtl >= 2.1 && < 2.3
    , prim-uniq >= 0.1.0.1 && < 0.2
    , primitive >= 0.6.4 && < 0.7
    , random >= 1.1 && < 1.2
    , ref-tf >= 0.4 && < 0.5
    , reflection >= 2.1 && < 2.2
    , semigroupoids >= 4 && < 6
    , semigroups >= 0.16 && < 0.19
    , stm >= 2.4 && < 2.6
    , syb >= 0.5 && < 0.8
    , these >= 0.4 && < 0.7.6
    , transformers >= 0.2 && < 0.6
    , transformers-compat >= 0.3 && < 0.7
    , unbounded-delays >= 0.1 && < 0.2
  other-modules:
    Prelude 
  exposed-modules:
--    Data.AppendMap,
--    Data.FastMutableIntMap,
--    Data.FastWeakBag,
--    Data.Functor.Misc,
--    Data.Map.Misc,
--    Data.WeakBag,
--    Reflex,
--    Reflex.Class,
--    Reflex.Adjustable.Class,
--    Reflex.BehaviorWriter.Base,
--    Reflex.BehaviorWriter.Class,
--    Reflex.Collection,
--    Reflex.Dynamic,
--    Reflex.Dynamic.Uniq,
--    Reflex.DynamicWriter,
--    Reflex.DynamicWriter.Base,
--    Reflex.DynamicWriter.Class,
--    Reflex.EventWriter,
--    Reflex.EventWriter.Base,
--    Reflex.EventWriter.Class,
--    Reflex.FastWeak,
--    Reflex.FunctorMaybe,
--    Reflex.Host.Class,
--    Reflex.Network,
--    Reflex.NotReady.Class,
--    Reflex.Patch,
--    Reflex.Patch.Class,
--    Reflex.Patch.DMap,
--    Reflex.Patch.DMapWithMove,
--    Reflex.Patch.IntMap,
--    Reflex.Patch.Map,
--    Reflex.Patch.MapWithMove,
--    Reflex.PerformEvent.Base,
--    Reflex.PerformEvent.Class,
--    Reflex.PostBuild.Base,
--    Reflex.PostBuild.Class,
--    Reflex.Profiled,
--    Reflex.Pure,
--    Reflex.Query.Base,
--    Reflex.Query.Class,
--    Reflex.Requester.Base,
--    Reflex.Requester.Class,
--    Reflex.Spider,
--    Reflex.Spider.Internal,
--    Reflex.Time,
--    Reflex.TriggerEvent.Base,
--    Reflex.TriggerEvent.Class,
--    Reflex.Widget.Basic,
--    Reflex.Workflow

  ghc-options:
    -Wall
    -O2
    -funbox-strict-fields
    -fspecialise-aggressively

source-repository head
  type:
    git
  location:
    https://github.com/chessai/reflex-mono
