cabal-version: 2.4
name:
  reflex-mono
version:
  0.5
synopsis:
  Higher-order Functional Reactive Programming
description:
  reflex is a high-performance, deterministic, higher-order Functional Reactive Programming system
license:
  BSD-3-Clause
license-file:
  LICENSE
author:
  Ryan Trinkle
maintainer:
  chessai1996@gmail.com
stability:
  experimental
category:
  FRP
build-type:
  Simple
homepage:
  https://reflex-frp.org
bug-reports:
  https://github.com/chessai/reflex-mono/issues
extra-source-files:
  README.md

flag use-reflex-optimizer
  description: Use the GHC plugin Reflex.Optimizer on some of the modules in the package.  This is still experimental.
  default: False
  manual: True

flag use-template-haskell
  description: Use template haskell to generate lenses
  default: True
  manual: True

flag debug-trace-events
  description: Add instrumentation that outputs the stack trace of the definition of an event whenever it is subscribed to. Warning: It is very slow!
  default: False
  manual: True

flag fast-weak
  description: Use the primitive implementation of FastWeak in GHCJS; note that this requires GHCJS to be built with FastWeak and FastWeakBag present in the RTS, which is not the default
  default: False
  manual: True

library
  hs-source-dirs:
    src
  build-depends:
    , base-noprelude >= 4.10.1 && < 4.13
    , MemoTrie == 0.6.*
    , base >= 4.9 && < 4.13
    , bifunctors >= 5.2 && < 5.6
    , comonad
    , containers >= 0.5 && < 0.7
    , data-default >= 0.5 && < 0.8
    , dependent-map >= 0.2.4 && < 0.3
    , dependent-sum >= 0.4 && < 0.5
    , exception-transformers == 0.4.*
    , lens >= 4.7 && < 5
    , monad-control >= 1.0.1 && < 1.1
    , monoidal-containers == 0.4.*
    , mtl >= 2.1 && < 2.3
    , prim-uniq >= 0.1.0.1 && < 0.2
    , primitive >= 0.5 && < 0.7
    , random == 1.1.*
    , ref-tf == 0.4.*
    , reflection == 2.1.*
    , semigroupoids >= 4.0 && < 6
    , semigroups >= 0.16 && < 0.19
    , stm >= 2.4 && < 2.6
    , syb >= 0.5 && < 0.8
    , these >= 0.4 && < 0.7.6
    , time >= 1.4 && < 1.9
    , transformers >= 0.2
    , transformers-compat >= 0.3
    , unbounded-delays >= 0.1 && < 0.2
  exposed-modules:
    Reflex
  other-modules:
    Data.FastMutableIntMap
    Data.FastWeakBag
    Data.Functor.Misc
    Data.FunctorMaybe
    Data.WeakBag
    Reflex.FastWeak
    Reflex.Patch
    Reflex.Patch.Class
    Reflex.Patch.DMap
    Reflex.Patch.DMapWithMove
    Reflex.Patch.IntMap
    Reflex.Patch.Map
    Reflex.Patch.MapWithMove
    Reflex.PostBuild.Base
    Reflex.PostBuild.Class
    Reflex.EventWriter.Base
    Reflex.EventWriter.Class
  ghc-options:
    -Wall
    -O2
  default-language:
    Haskell2010

  if flag(debug-trace-events)
    cpp-options: -DDEBUG_TRACE_EVENTS
    build-depends: bytestring

  if flag(use-reflex-optimizer)
    cpp-options: -DUSE_REFLEX_OPTIMIZER
    build-depends: ghc
    exposed-modules: Reflex.Optimizer

  if flag(fast-weak) && impl(ghcjs)
    cpp-options: -DGHCJS_FAST_WEAK

  if impl(ghcjs)
    build-depends: ghcjs-base

source-repository head
  type: git
  location: https://github.com/chessai/reflex-mono
